revision y correccion de modulos, servicios y entidades

--- a/src/main/resources/templates/correocliente.html
+++ b/src/main/resources/templates/correocliente.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <img src="../../../logo.jpg" th:src="|cid:${logo}|" />
+        <img src="../../../logo.png" th:src="|cid:${logo}|" />
     </div>
     <div class="container">
         <h4>
