cambios en la configuracion de Backend

--- a/src/main/resources/templates/correoempresa.html
+++ b/src/main/resources/templates/correoempresa.html
@@ -10,14 +10,14 @@
 
 <body>
     <div>
-        <img src="../../../logo.png" th:src="|cid:${logo}|" />
+        <img src="../../resources/logo.png" th:src="|cid:${logo}|" />
     </div>
     <div class="container">
         <h4>
             Bienvenido <b th:text="${empresa}"></b>
         </h4>
         <p>Tiene una solicitud de productos que debe ser respondida ingrese al sistema para ponerse en contacto con el cliente <b th:text="${nombre}"></b></p>
-        <p><a th:href="@{https://desarrolla.oruro.gob.bo/mipymesapp}">MiPyMEs</p>
+        <p><a th:href="@{https://reactivatic.oruro.gob.bo/reactivaticapp}">REACTIVA TIC</p>
     </div>
 </body>
 
